debut page index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 </head>
 <body>
     <header>
-        
+        <a href="/">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
+        </a>
+        <h1> Expositions </h1>
+        <h2>L'art de Shigeru Ban</h2>
+        <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban">
+        <h3>13 avril au 23 juin 2024</h3>
     </header>
+    <section>
+        <h2>Dans un lieu d’exception </h2>
+        <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier">
+        <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+        <h3> Du 13 avril au 23 juin 2024</h3>
+        <h3> Tout les jours</h3>
+    </section>
+    <section>
+        <h3>Pour présenter un Architect mondialement connue</h3>
+        <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban">
+        <h2>Shigeru Ban</h2>        
+    </section>
+    
 </body>
 </html>
