--- a/index.html
+++ b/index.html
@@ -112,6 +112,25 @@
             </button>
         </article>
     </section>
+    <section>
+        <h2>Contactez Nous</h2>
+        <p> Vous pouvez nous contacter si vous avez besoin d'aide ou de renseignements.</p>
+        <form action="#">
+            <div>
+              <label for="Prénom" >Prénom</label>
+              <input type="text" name="Prénom" id="Prénom" />
+            </div>
+            <div>
+              <label for="Nom" >Nom</label>
+              <input type="text" name="Nom" id="Nom" />
+            </div>
+            <div>
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5"></textarea>
+            </div>
+            <button type="submit" >Envoyer</button>
+          </form>
+    </section>
     
 </body>
 </html>
