infos textuel + footer

--- a/infos.html
+++ b/infos.html
@@ -16,10 +16,48 @@
       ouvert : 1,
      }">
     <ul role="tablist">
-      <li role="tab" @click="ouvert=1">lieu</li>
-      <li role="tab" @click="ouvert=2"> Horaires</li>
-      <li role="tab" @click="ouvert=3">Tarifs</li>
+      <li role="tab" >lieu</li>
+      <li role="tab" > Horaires</li>
+      <li role="tab" >Tarifs</li>
     </ul>
-    
+    <div>
+        <div role="tabpanel" >
+          <h1>Le Lieu</h1>
+          <a href="#"><img src="/public/img/infos.webp" alt="photo montrant le lieu sur une carte"></a>
+          <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+        </div>
+        <div role="tabpanel" >
+          <h1>Les Horaires</h1>
+          <p>Lundi : 11:00-20:00
+            Mardi : 11:00-22:00
+            Mercredi : 11:00-20:00
+            Jeudi : 11:00-20:00
+            Vendredi : 11:00-20:00
+            Samedi : 11:00-20:00
+            Dimanche : 11:00-20:00
+            La fermeture des salles débute à 19h45 (21h45 les mardis).</p>
+        </div>
+        <div role="tabpanel" >
+          <h1>Les Tarifs</h1>
+          <p>Plein tarif -11€
+            Tarif réduit -7,50€
+            Réduction 13 - 25 ans-5€
+            Fondation Cartier Pass -18€ - 50€
+            Gratuit pour:
+            Moins de 13 ans,
+            Laissez-passer annuel,
+            carte Icom, 
+            carte de presse, 
+            carte d'invalidité, 
+            Fondation Cartier Pass, 
+            Etudiants </p>
+        </div>
+      </div>
+      <footer>
+        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136 1.svg" alt="logo facebook"></a>
+        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122 1.svg" alt="logo instagram"></a>
+        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+    </footer>
 </body>
 </html>
