--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="/">
+        <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
         </a>
         <h1> Expositions </h1>
