ajout des images et des texte sur la pages oeuvres

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -10,6 +10,48 @@
         <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
         </a>
-    </header>    
+    </header>
+    <h2>Œuvres </h2>  
+    <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
+    <article>
+        <h3>2008</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
+        <h3>Crescent House</h3>
+    </article> 
+    <article>
+        <h3>2010</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
+        <h3>Centre Ponpidou Metz</h3>
+    </article>
+    <article>
+        <h3>2013</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
+        <h3>Cardboard Cathedral</h3>
+    </article>
+    <article>
+        <h3>2017</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
+        <h3>Khumjung secondary school </h3>
+    </article>
+    <article>
+        <h3>2021</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
+        <h3>Shonai hotel Suiden terrasse spa</h3>
+    </article>
+    <article>
+        <h3>2022</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
+        <h3>ZEN Wellness SEINEI</h3>
+    </article>
+    <article>
+        <h3>2023</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
+        <h3>Temporary housing in Marrakesh</h3>
+    </article>
+    <article>
+        <h3>2023</h3>
+        <a href="#"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
+        <h3>Simose</h3>
+    </article>
 </body>
 </html>
