footer page oeuvres

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -53,5 +53,11 @@
         <a href="#"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
         <h3>Simose</h3>
     </article>
+    <footer>
+        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136 1.svg" alt="logo facebook"></a>
+        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122 1.svg" alt="logo instagram"></a>
+        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+    </footer>
 </body>
 </html>
