--- a/Ponpidou.html
+++ b/Ponpidou.html
@@ -38,6 +38,15 @@
             <img src="/public/img/Ponpidou/ponpidou5.webp" alt="Vue sur la cathédral de Metz depuis le musée">
             <p>Vue sur la cathédral de Metz depuis le musée</p>
         </article>
-    </section>    
+    </section> 
+    <section>
+        <h3>Retour vers les Oeuvres </h3>
+    </section>  
+    <footer>
+        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136 1.svg" alt="logo facebook"></a>
+        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122 1.svg" alt="logo instagram"></a>
+        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+    </footer> 
 </body>
 </html>
