--- a/népal.html
+++ b/népal.html
@@ -11,5 +11,26 @@
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
         </a>
     </header>
+    <section>
+        <h2>Khumjung secondary school </h2>
+        <article>
+            <img src="/public/img/nepal/nepal1.webp" alt="photo d'inoguration de l'école au népal">
+            <p>photo d'inoguration de l'école au népal</p>
+            <p>Située à 3 790 m d'altitude au Népal, l'école de Khumjung a été construite pour la première fois par le premier alpiniste du mont Everest, Sir Edmund Hillary, en 1961.</p>
+        </article>
+        <article>
+            <img src="/public/img/nepal/nepal2.webp" alt="Vue intérieur de l'école">
+            <p>Vue intérieur de l'école</p>
+            <p>Le tremblement de terre d'avril 2015 a également laissé l'école de Khumjung dans un environnement dangereux pour les 300 étudiants. 
+                L’université Doshisha Le Club Alpin a lancé un projet de remplacement d'un bâtiment de classe.</p>
+        </article>
+        <article>
+            <img src="/public/img/nepal/nepal3.webp" alt="Vue extérieur de l'école">
+            <p>Vue extérieur de l'école</p>
+            <p>Les murs en pierre sont couramment observés dans toute la région. Pour renforcer les murs afin qu'ils deviennent résistants aux tremblements de terre, l’architecte et son équipe à conçue une unité murale dans laquelle la charpente en bois fait office de structure principale et les pierres trouvées localement sont empilées pour fournir une clôture. Pour garantir la sécurité, l’architecte et son équipe à effectué des tests structurels de cette charpente en bois au Japon.</p>
+            <img src="/public/img/nepal/nepal4.webp" alt="Vue globale éxterieur de l'école">
+            <p>Vue globale éxterieur de l'école</p>
+        </article>
+    </section>
 </body>
 </html>
