article page suiden

--- a/suiden.html
+++ b/suiden.html
@@ -11,6 +11,25 @@
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
         </a>
     </header>
-    
+    <section>
+        <h2>Shonai hotel Suiden terrasse spa</h2>
+        <article>
+            <img src="/public/img/suiden/suiden1.webp" alt="photo extérieur du spa">
+            <p>photo extérieur du spa</p>
+            <p>Conçue par l'architecte de renommée mondiale Shigeru Ban, SUIDEN TERRASSE a été conçue pour que les rizières puissent être ressenties et ressenties où que vous soyez dans le bâtiment.</p>
+        </article>
+        <article>
+            <img src="/public/img/suiden/suiden2.webp" alt="Vue d'un bassin d'eau du spa">
+            <p>Vue d'un bassin d'eau du spa</p>
+            <p>Des plaines de Dewasanzan et Shonai à la mer du Japon. La région de Shonai, dans la préfecture de Yamagata, possède une nature riche.</p>
+        </article>
+        <article>
+            <img src="/public/img/suiden/suiden4.webp" alt="Vue intérieur du spa">
+            <p>Vue intérieur du spa</p>
+            <p>Le paysage emblématique de cette terre - les rizières (« SUIDEN »） - est ce qui a inspiré la création de SUIDEN TERRASSE. Flottant au milieu des rizières, se fondant dans les paysages environnants et les paysages ruraux.</p>
+            <img src="/public/img/suiden/suiden3.webp" alt="Vue sur un bassin du spa">
+            <p>Vue sur un bassin du spa</p>
+        </article>
+    </section>
 </body>
 </html>
