--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     </section>
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136 1.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122 1.svg" alt="logo instagram"></a>
+        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
         <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
     </footer>
 </body>
