correction index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" />
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
         </a>
         <h1> Expositions </h1>
         <h2>L'art de Shigeru Ban</h2>
@@ -108,7 +108,7 @@
             <h3>Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p>L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
             <button>
-                <h3>Billetterie</h3>
+                <p>Billetterie</p>
             </button>
         </article>
     </section>
@@ -118,11 +118,11 @@
         <form action="#">
             <div>
               <label for="Prénom" >Prénom</label>
-              <input type="text" name="Prénom" id="Prénom" />
+              <input type="text" name="Prénom" id="Prénom">
             </div>
             <div>
               <label for="Nom" >Nom</label>
-              <input type="text" name="Nom" id="Nom" />
+              <input type="text" name="Nom" id="Nom">
             </div>
             <div>
               <label for="message">Message</label>
