création du menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
         </a>
+        <button>
+            <span></span>
+          </button>
+          <ul >
+            <li><a href="/infos.html" >Infos</a></li>
+            <li><a href="/billetterie.html" >Billetterie</a></li>
+            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
+            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
+          </ul>
         <h1> Expositions </h1>
         <h2>L'art de Shigeru Ban</h2>
         <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban">
