mise du menu sur toute les pages existente

--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -10,6 +10,15 @@
         <a href="/">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
         </a>
+        <button>
+            <span></span>
+          </button>
+          <ul >
+            <li><a href="/infos.html" >Infos</a></li>
+            <li><a href="/billetterie.html" >Billetterie</a></li>
+            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
+            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
+          </ul>
     </header>
     <section>
         <h2>Shigeru Ban</h2>
