ajour d'une citation

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <button>
                 <p>Billetterie</p>
             </button>
+            <cite>Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
     </section>
     <section>
