--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier">
         <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
         <h3> Du 13 avril au 23 juin 2024</h3>
-        <h3> Tout les jours</h3>
+        <a href="/infos.html">Tout les jours</a> 
     </section>
     <section>
         <h3>Pour présenter un Architect mondialement connue</h3>
         <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban">
-        <h2>Shigeru Ban</h2>        
+        <a href="/shigeru-Ban.html">Shigeru Ban</a>        
     </section>
     <section>
         <article>
             <h3>Venez découvrir ces œuvres </h3>
+            <article>
+                <p> Un petit avant goût de ces créations</p>
+            </article>
             <div  x-data="{
                 hrefCourant: '#ecran-1',
             }">
@@ -111,14 +114,9 @@
             </div>
         </article>
         <article>
-            <p> Un petit avant goût de ces créations</p>
-        </article>
-        <article>
             <h3>Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p>L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
-            <button>
-                <p>Billetterie</p>
-            </button>
+            <a  href="/index.html"> Accueil </a>
             <cite>Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
     </section>
