ajout du main sur toute le pages coder

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -20,6 +20,7 @@
             <li><a href="/Oeuvres.html" >Oeuvres</a></li>
           </ul>
     </header>
+<main>
     <h2>Œuvres </h2>  
     <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
     <article>
@@ -62,6 +63,7 @@
         <a href="#"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
         <h3>Simose</h3>
     </article>
+</main>
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
