--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban">
         <h3>13 avril au 23 juin 2024</h3>
     </header>
+    <main>
     <section>
         <h2>Dans un lieu d’exception </h2>
         <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier">
@@ -139,6 +140,7 @@
             <button type="submit" >Envoyer</button>
           </form>
     </section>
+</main>
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
