--- a/infos.html
+++ b/infos.html
@@ -20,6 +20,7 @@
           <li><a href="/Oeuvres.html" >Oeuvres</a></li>
         </ul>
     </header>
+    <main>
     <h1>Infos</h1>
     <div id="onglets" x-data="{
       ouvert : 1,
@@ -62,6 +63,7 @@
             Etudiants </p>
         </div>
       </div>
+    </main>
       <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
