--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -20,6 +20,7 @@
             <li><a href="/Oeuvres.html" >Oeuvres</a></li>
           </ul>
     </header>
+<main>
     <section>
         <h2>Shigeru Ban</h2>
         <img src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
@@ -42,6 +43,7 @@
             <p>L'exposition ne manquera pas de mettre en avant les réalisations majeures de Shigeru Ban à travers le monde. Des bâtiments emblématiques aux ponts innovants, chaque projet sera présenté de manière immersive, offrant aux visiteurs une expérience visuelle et informative. Des installations interactives et des projections audiovisuelles donneront vie aux projets de l'architecte, permettant aux visiteurs de plonger au cœur de son processus créatif.</p>
         </article>
     </section>
+</main>
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
