--- a/Ponpidou.html
+++ b/Ponpidou.html
@@ -20,6 +20,7 @@
             <li><a href="/Oeuvres.html" >Oeuvres</a></li>
           </ul>
     </header>
+<main>
     <section>
         <h2>Centre Ponpidou Metz</h2>
         <article>
@@ -50,7 +51,8 @@
     </section> 
     <section>
         <h3>Retour vers les Oeuvres </h3>
-    </section>  
+    </section> 
+</main> 
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
