--- a/billetterie.html
+++ b/billetterie.html
@@ -20,7 +20,9 @@
             <li><a href="/Oeuvres.html" >Oeuvres</a></li>
           </ul>
     </header>
+    <main>
     <h2>Prenez votre ticket directement en ligne </h2>
+</main>
     <footer>
         <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
         <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
