création des liens pour naviguer entre les pages oeuvres

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -25,43 +25,43 @@
     <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
     <article>
         <h3>2008</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
-        <h3>Crescent House</h3>
+        <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
+        <a href="/maison.html">Crescent House</a>
     </article> 
     <article>
         <h3>2010</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
-        <h3>Centre Ponpidou Metz</h3>
+        <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
+        <a href="/Ponpidou.html">Centre Ponpidou Metz</a>
     </article>
     <article>
         <h3>2013</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
-        <h3>Cardboard Cathedral</h3>
+        <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
+        <a href="/cathedral.html">Cardboard Cathedral</a>
     </article>
     <article>
         <h3>2017</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
-        <h3>Khumjung secondary school </h3>
+        <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
+        <a href="/népal.html">Khumjung secondary school </a>
     </article>
     <article>
         <h3>2021</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
-        <h3>Shonai hotel Suiden terrasse spa</h3>
+        <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
+        <a href="/suiden.html">Shonai hotel Suiden terrasse spa</a>
     </article>
     <article>
         <h3>2022</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
-        <h3>ZEN Wellness SEINEI</h3>
+        <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
+        <a href="/hotel.html">ZEN Wellness SEINEI</a>
     </article>
     <article>
         <h3>2023</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
-        <h3>Temporary housing in Marrakesh</h3>
+        <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
+        <a href="/maroc.html">Temporary housing in Marrakesh</a>
     </article>
     <article>
         <h3>2023</h3>
-        <a href="#"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
-        <h3>Simose</h3>
+        <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
+        <a href="/simose.html">Simose</a>
     </article>
 </main>
     <footer>
