--- a/simose.html
+++ b/simose.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
+    <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
     <header>
