debut css header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
         </a>
