classe header et début des style css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <li><a href="/Oeuvres.html" >Oeuvres</a></li>
           </ul>
         <h1> Expositions </h1>
-        <h2>L'art de Shigeru Ban</h2>
-        <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban">
-        <h3>13 avril au 23 juin 2024</h3>
+        <h2 class="header-titre2"><strong> L'art de Shigeru Ban</strong></h2>
+        <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban" class="header-img">
+        <h3 class="header-intertitre">13 avril au 23 juin 2024</h3>
     </header>
     <main>
     <section>
