essaye de faire le menu

--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
         <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul>
+                    <li><a href="/infos.html" >Infos</a></li>
+                    <li><a href="/billetterie.html" >Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" >Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
         <h1> Expositions </h1>
         <h2 class="header-titre2"><strong> L'art de Shigeru Ban</strong></h2>
         <img src="/public/img/accueil/accueil-1.webp" alt="photo de Shigeru Ban" class="header-img">
