--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <h3 class="header-intertitre">13 avril au 23 juin 2024</h3>
     </header>
     <main>
-    <section>
-        <h2>Dans un lieu d’exception </h2>
-        <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier">
-        <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
-        <h3> Du 13 avril au 23 juin 2024</h3>
-        <a href="/infos.html">Tout les jours</a> 
+    <section class="section">
+        <h2 class="titre2_marrons">Dans un lieu d’exception </h2>
+        <img src="/public/img/accueil/accueil-2.webp" alt="Fondation Cartier" class="img-section1">
+        <p class="texte-marrons">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+        <h3 class="intertitre-marrons"> Du 13 avril au 23 juin 2024</h3>
+        <a href="/infos.html" class="Btn-infos">Tout les jours</a> 
     </section>
     <section>
         <h3>Pour présenter un Architect mondialement connue</h3>
         <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban">
-        <a href="/shigeru-Ban.html">Shigeru Ban</a>        
+        <a href="/shigeru-Ban.html" >Shigeru Ban</a>        
     </section>
     <section>
         <article>
