déclaration des class dans l'index html, import dans le style css et création d'un components

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h3 class="intertitre-marrons"> Du 13 avril au 23 juin 2024</h3>
         <a href="/infos.html" class="Btn-infos">Tout les jours</a> 
     </section>
-    <section>
-        <h3>Pour présenter un Architect mondialement connue</h3>
-        <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban">
-        <a href="/shigeru-Ban.html" >Shigeru Ban</a>        
+    <section class="section section__marrons">
+        <h3 class="architecte-intertitre">Pour présenter un Architect mondialement connue</h3>
+        <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban" class="architecte-img">
+        <a href="/shigeru-Ban.html" class="Btn-architecte">Shigeru Ban</a>        
     </section>
     <section>
         <article>
